<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kg.geeks.taskmanagement.ui.fragment.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="kg.geeks.taskmanagement.ui.fragment.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="kg.geeks.taskmanagement.ui.fragment.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="kg.geeks.taskmanagement.ui.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_authFragment"
            app:destination="@id/authFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/onBoardFragment"
        android:name="kg.geeks.taskmanagement.ui.fragment.onboarding.OnBoardFragment"
        android:label="fragment_on_board"
        tools:layout="@layout/fragment_on_board" />
    <fragment
        android:id="@+id/taskFragment"
        android:name="kg.geeks.taskmanagement.ui.fragment.task.TaskFragment"
        android:label="fragment_task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/authFragment"
        android:name="kg.geeks.taskmanagement.ui.fragment.auth.AuthFragment"
        android:label="fragment_auth"
        tools:layout="@layout/fragment_auth" />
</navigation>